syntax = "proto3";

package chat.v1;

import "google/api/annotations.proto";
import "api/pb/message.proto";

option go_package = "github.com/xmcy0011/CoffeeChat/api/chat/v1;v1";

service Chat {
  // 查询会话列表
  rpc RecentContactSession(CIMRecentContactSessionReq) returns(CIMRecentContactSessionRsp) {}
  // 查询历史消息列表
  rpc GetMsgList(CIMGetMsgListReq) returns(CIMGetMsgListRsp) {}

  // 发消息
  rpc SendMsgData(CIMMsgData) returns(CIMMsgDataAck) {}
  // 已读消息回执
  rpc ReadAckMsgData(CIMMsgDataReadAck) returns(Empty) {}
}

// 历史离线聊天消息请求
message CIMGetMsgListReq {
  // cmd id:		0x0205
  uint64 user_id = 1;
  CIMSessionType session_type = 2;
  uint64 session_id = 3;
  //   uint64 from_time_stamp = 4; // 起始时间点，单位：毫秒
  //   uint64 end_time_stamp = 5;  // 结束时间点，单位：毫秒
  uint64 end_msg_id = 4; // 结束服务器消息id(不包含在查询结果中)
  uint32 limit_count = 6; // 本次查询消息的条数上线(最多100条)
  // repeated CIM.Def.CIMMessageType msg_type_list = 7; // 查询指定的消息类型
  // optional bool is_exclusion_type_ = 8; // 是否排除指定的消息类型
}

//对于群而言，如果消息数目返回的数值小于请求的cnt,则表示群的消息能拉取的到头了，更早的消息没有权限拉取。
//如果limit_count 和 msg_list.count 不一致，说明服务器消息有缺失，需要
//客户端做一个缺失标记，避免下次再次拉取。
message CIMGetMsgListRsp {
  // cmd id:		0x0206
  uint64 user_id = 1;
  CIMSessionType session_type = 2;
  uint64 session_id = 3;
  uint64 end_msg_id = 4; // 结束服务器消息id(不包含在查询结果中)
  //   uint64 from_time_stamp = 4;     // 起始时间点，单位：毫秒
  //   uint64 end_time_stamp = 5;      // 结束时间点，单位：毫秒
  repeated CIMMsgInfo msg_list = 6; // 消息列表
}

// 消息信息
message CIMMsgInfo {
  string client_msg_id = 1; // 客户端消息ID（UUID）
  uint64 server_msg_id = 2; // 服务端消息ID

  CIMResCode msg_res_code = 3;     // 消息错误码
  CIMMsgFeature msg_feature = 4;   // 消息属性
  CIMSessionType session_type = 5; // 会话类型
  uint64 from_user_id = 6;         // 来源会话ID
  uint64 to_session_id = 7;        // 目标会话ID
  uint32 create_time = 8;          // 消息创建时间戳（毫秒）

  CIMMsgType msg_type = 9;      // 消息类型
  CIMMsgStatus msg_status = 10; // 消息状态（预留）
  bytes msg_data = 11;          // 消息内容
  /*optional*/
  string attach = 12;                    // 消息附件（预留）
  CIMClientType sender_client_type = 13; // 发送者客户端类型
}

// 消息属性
enum CIMMsgFeature {
  kCIM_MSG_FEATURE_DEFAULT = 0; // 默认
  // kCIM_MSG_FEATURE_LEAVE_MSG = 1;      // 离线消息(和漫游消息有何区别)
  kCIM_MSG_FEATURE_ROAM_MSG = 2; // 漫游消息，多端同步接收，永久存储(或1年)
  // kCIM_MSG_FEATURE_SYNS_MSG = 3;       // 同步消息
  // kCIM_MSG_FEATURE_CUSTOMIZED_MSG = 4; // 透传消息
}

// 发送消息
message CIMMsgData {
  // cmd id:		0x0301
  uint64 from_user_id = 1;    // 消息发送方
  string from_nick_name = 2;  // 消息发送方昵称
  uint64 to_session_id = 3;   // 消息接受方，单聊用户ID，群聊群ID
  string client_msg_id = 4;   // 客户端消息ID，唯一（UUID）
  uint64 server_msg_id = 5;   // 服务端生成的消息ID，顺序（客户端发送时无需设置）
  int32 create_time = 6;      // 消息创建时间戳(秒)
  CIMMsgType msg_type = 7;         // 消息类型
  CIMSessionType session_type = 8; // 会话类型
  bytes msg_data = 9;                      // 消息内容
}

// 客户端类型
enum CIMClientType {
  kCIM_CLIENT_TYPE_DEFAULT = 0; // unset
  kCIM_CLIENT_TYPE_ANDROID = 1; // 安卓
  kCIM_CLIENT_TYPE_IOS = 2;     // iOS
  kCIM_CLIENT_TYPE_WEB = 3;     // WebSocket
  kCIM_CLIENT_TYPE_REST_API = 4; // RestAPI
  kCIM_CLIENT_TYPE_PC_WINDOWS = 5; // PC Windows
  kCIM_CLIENT_TYPE_MAC_OS = 6;     // MAC
}

// 消息收到回复
message CIMMsgDataAck {
  // cmd id:		0x0302
  uint64 from_user_id = 1;  // 消息发送方
  uint64 to_session_id = 2; // 消息接受方，单聊用户ID，群聊群ID
  string client_msg_id = 3; // 客户端消息ID，唯一（UUID）
  uint64 server_msg_id = 4; // 服务端生成的消息ID，顺序
  CIMResCode res_code = 5;         // 错误码
  CIMSessionType session_type = 6; // 会话类型
  /*optional*/ int32 create_time = 7;      // 创建时间戳(毫秒)
}

// 消息错误码
enum CIMResCode {
  kCIM_RES_CODE_UNKNOWN = 0; // unknown
  kCIM_RES_CODE_OK = 1;      // 一切正常
  // kCIM_RES_CODE_ERROR = 1;           // 错误
  // kCIM_RES_CODE_Group_NOT_EXIST = 2; // 群不存在
  // kCIM_RES_CODE_IN_BLACK = 3;        // 被接收方加入黑名单
}

// 最近聊天会话列表请求
message CIMRecentContactSessionReq {
  uint64 user_id = 1;
  uint32 latest_update_time = 2; // 最后更新时间
}

message CIMRecentContactSessionRsp {
  uint64 user_id = 1;
  uint32 unread_counts = 2; // 总未读数量
  repeated CIMContactSessionInfo contact_session_list = 3; // 会话列表
}

// 会话信息
message CIMContactSessionInfo {
  uint64 session_id = 1;                   // 会话id
  CIMSessionType session_type = 2;         // 会话类型
  CIMSessionStatusType session_status = 3; // 会话修改命令，预留
  uint32 unread_cnt = 4;                   // 该会话未读消息数量
  uint32 updated_time = 5;                 // 更新时间
  string msg_id = 6;                       // 最新一条消息的id（UUID）
  uint64 server_msg_id = 7; // 最新一条消息服务端的id（顺序递增）
  uint32 msg_time_stamp = 8;    // 最新一条消息时间戳（毫秒）
  bytes msg_data = 9;           // 最新一条消息的内容
  CIMMsgType msg_type = 10;     // 最新一条消息的类型
  uint64 msg_from_user_id = 11; // 最新一条消息的发送者
  CIMMsgStatus msg_status = 12; // 最新一条消息的状态（预留）
  /*optional*/
  string msg_attach = 13; // 最新一条消息的附件（预留）
  /*optional*/
  string extend_data = 14; // 本地扩展字段（限制4096）
  /*optional*/
  bool is_robot_session = 15; // 是否为机器人会话
}

// 消息已读回复（我方）
message CIMMsgDataReadAck {
  // cmd id:		0x0303
  uint64 user_id = 1; // 消息发送方
  uint64 session_id = 2;
  uint64 msg_id = 3; // 服务器消息ID，在该ID之前的所有消息被标记为已读
  CIMSessionType session_type = 4;
}

message CIMMsgDataReadAckRes{

}

// 会话类型
enum CIMSessionType {
  kCIM_SESSION_TYPE_Invalid = 0; // 无效会话
  kCIM_SESSION_TYPE_SINGLE = 1;  // 单聊
  kCIM_SESSION_TYPE_GROUP = 2;   // 群聊
  // kCIM_SESSION_TYPE_CHAT_ROOM = 3; // 聊天室
  // kCIM_SESSION_TYPE_CONSULT = 4; // 客服
}

// 会话状态
enum CIMSessionStatusType {
  kCIM_SESSION_STATUS_UNKNOWN = 0; // 未知
  kCIM_SESSION_STATUS_OK = 1;
  kCIM_SESSION_STATUS_DELETE = 2;
}

/* 消息类型补充说明
文件：
{
  "md5":"e10adc3949ba59abbe56e057f20f883e",         # md5,32位
  "size":"1024123",                                 # 文件大小,B
  "url":"http://file.qiniu.com/15923014023.pdf",    # 下载地址
  "displayName":"test.pdf",                         # 文件显示名称
  "fileExtension":"pdf",                            # 文件扩展名
  "icoThumbUrl":"http://file.qiniu.com/1124.png"    # 类型图标url（便于维护）
}
语音：
{
  "md5":"e10adc3949ba59abbe56e057f20f883e",         # md5,32位
  "size":"1024123",                                 # 文件大小,B
  "url":"http://file.qiniu.com/15923014023.mp3",    # 下载地址
  "displayName":"test.mp3",                         # 文件显示名称
  "fileExtension":"pdf",                            # 文件扩展名
  "duration":"120"                                  # 时长，秒
}
视频：
{
  "md5":"e10adc3949ba59abbe56e057f20f883e",         # md5,32位
  "size":"1024123",                                 # 文件大小,B
  "url":"http://file.qiniu.com/15923014023.mp4",    # 下载地址
  "displayName":"test.mp4",                         # 文件显示名称
  "fileExtension":"mp4",                            # 文件扩展名
  "duration":"15",                                  # 视频时长，秒
  "width":"1080",                                   # 视频画面宽度
  "height":"1920",                                  # 视频画面高度
  "thumbUrl":"http://file.qiniu.com/1124.png"       # 视频封面图片url
}
位置：
{
  "latitude":"31.301844",                         # 纬度
  "longitude":"121.513257",                       # 经度
  "coordinate":"GCJ02",                           # 坐标系
  "address":"上海市黄浦区福州路465号世纪出版大厦",     # 地址
  "poi":"上海书城(福州路店)"                        # 兴趣点
}
机器人-上行：直接发送消息即可，如果是文本则直接使用，其他图片、视频等，会转换成[图片]、[视频]等字符
机器人-下行：
{
  "body":"机器人你好",  # 原始文本数据，在UI中展现
  "content":{
    # 机器人回答，文本消息，需要配合参数content "content":"你也好"
    "type":"text",
  }
}
音视频通话：
{
  "hangupUserId":1992,
  "hangupReason":1,    # 参考CIMVoipByeReason
  "timeLen": 0,        # 通话时长（秒）
  "callType":1,        # 0:unknown,1:voice,2:video
}
系统通知：
{
  "notificationId":"" # 见CIMMsgNotificationId
  "data":{}
}
*/

// 消息类型
enum CIMMsgType {
  kCIM_MSG_TYPE_UNKNOWN = 0; // 未知类型消息，本地使用，发送时请勿使用
  kCIM_MSG_TYPE_TEXT = 1;         // 文本
  kCIM_MSG_TYPE_FILE = 2;         // 文件
  kCIM_MSG_TYPE_IMAGE = 3;        // 图片
  kCIM_MSG_TYPE_AUDIO = 4;        // 声音
  kCIM_MSG_TYPE_VIDEO = 5;        // 视频
  kCIM_MSG_TYPE_LOCATION = 6;     // 位置
  kCIM_MSG_TYPE_ROBOT = 7;        // 图灵机器人消息
  kCIM_MSG_TYPE_TIPS = 8;         // 提醒类型
  kCIM_MSG_TYPE_NOTIFACATION = 9; // 系统通知（包括入群出群通知等）
  kCIM_MSG_TYPE_AVCHAT = 10;      // 由音视频通话产生的消息

  // kCIM_MSG_TYPE_CUSTOM = 100; // 自定义
}

// 消息状态
enum CIMMsgStatus {
  kCIM_MSG_STATUS_NONE = 0;    // 默认，不能当查询条件，意义太多
  kCIM_MSG_STATUS_UNREAD = 1;  // 收到消息，未读
  kCIM_MSG_STATUS_READ = 2;    // 收到消息，已读
  kCIM_MSG_STATUS_DELETED = 3; // 已删
  kCIM_MSG_STATUS_SENDING = 4; // 发送中
  kCIM_MSG_STATUS_SENT = 5;    // 已发送
  kCIM_MSG_STATUS_RECEIPT = 6; // 对方已读发送的内容
  kCIM_MSG_STATUS_DRAFT = 7;   // 草稿
  kCIM_MSG_STATUS_SendCacel = 8; // 发送取消
  kCIM_MSG_STATUS_REFUSED = 9; // 被对方拒绝，比如被对方加入黑名单等等
  kCIM_MSG_STATUS_FAILED = 10; // 发送失败，客户端使用
}